Assignment-5/asgn5_19CS10048_19CS30014.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 F: %empty

    3 W: %empty

    4 D: %empty

    5 X: %empty

    6 N: %empty

    7 changetable: %empty

    8 primary_expression: IDENTIFIER
    9                   | INTEGER_CONSTANT
   10                   | FLOATING_CONSTANT
   11                   | CHARACTER_CONSTANT
   12                   | STRING_LITERAL
   13                   | '(' expression ')'

   14 postfix_expression: primary_expression
   15                   | postfix_expression '[' expression ']'
   16                   | postfix_expression '(' argument_expression_list_opt ')'
   17                   | postfix_expression '.' IDENTIFIER
   18                   | postfix_expression ARROW IDENTIFIER
   19                   | postfix_expression INC
   20                   | postfix_expression DEC
   21                   | '(' type_name ')' '{' initializer_list '}'
   22                   | '(' type_name ')' '{' initializer_list COMMA '}'

   23 argument_expression_list: assignment_expression
   24                         | argument_expression_list COMMA assignment_expression

   25 argument_expression_list_opt: argument_expression_list
   26                             | %empty

   27 unary_expression: postfix_expression
   28                 | INC unary_expression
   29                 | DEC unary_expression
   30                 | unary_operator cast_expression
   31                 | SIZEOF unary_expression
   32                 | SIZEOF '(' type_name ')'

   33 unary_operator: BITWISE_AND
   34               | MUL
   35               | ADD
   36               | SUB
   37               | BITWISE_NOT
   38               | '!'

   39 cast_expression: unary_expression
   40                | '(' type_name ')' cast_expression

   41 multiplicative_expression: cast_expression
   42                          | multiplicative_expression MUL cast_expression
   43                          | multiplicative_expression DIV cast_expression
   44                          | multiplicative_expression MOD cast_expression

   45 additive_expression: multiplicative_expression
   46                    | additive_expression ADD multiplicative_expression
   47                    | additive_expression SUB multiplicative_expression

   48 shift_expression: additive_expression
   49                 | shift_expression SHIFT_LEFT additive_expression
   50                 | shift_expression SHIFT_RIGHT additive_expression

   51 relational_expression: shift_expression
   52                      | relational_expression LT shift_expression
   53                      | relational_expression GT shift_expression
   54                      | relational_expression LTE shift_expression
   55                      | relational_expression GTE shift_expression

   56 equality_expression: relational_expression
   57                    | equality_expression EQ relational_expression
   58                    | equality_expression NEQ relational_expression

   59 AND_expression: equality_expression
   60               | AND_expression BITWISE_AND equality_expression

   61 exclusive_OR_expression: AND_expression
   62                        | exclusive_OR_expression BITWISE_XOR AND_expression

   63 inclusive_OR_expression: exclusive_OR_expression
   64                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   65 logical_AND_expression: inclusive_OR_expression
   66                       | logical_AND_expression AND M inclusive_OR_expression

   67 logical_OR_expression: logical_AND_expression
   68                      | logical_OR_expression OR M logical_AND_expression

   69 conditional_expression: logical_OR_expression
   70                       | logical_OR_expression N '?' M expression N COLON M conditional_expression

   71 assignment_expression: conditional_expression
   72                      | unary_expression assignment_operator assignment_expression

   73 assignment_operator: ASSIGN
   74                    | MUL_EQ
   75                    | DIV_EQ
   76                    | MOD_EQ
   77                    | ADD_EQ
   78                    | SUB_EQ
   79                    | SHIFT_LEFT_EQ
   80                    | SHIFT_RIGHT_EQ
   81                    | BITWISE_AND_EQ
   82                    | BITWISE_XOR_EQ
   83                    | BITWISE_OR_EQ

   84 expression: assignment_expression
   85           | expression COMMA assignment_expression

   86 constant_expression: conditional_expression

   87 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   88 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   89                       | type_specifier declaration_specifiers_opt
   90                       | type_qualifier declaration_specifiers_opt
   91                       | function_specifier declaration_specifiers_opt

   92 declaration_specifiers_opt: declaration_specifiers
   93                           | %empty

   94 init_declarator_list: init_declarator
   95                     | init_declarator_list COMMA init_declarator

   96 init_declarator_list_opt: init_declarator_list
   97                         | %empty

   98 init_declarator: declarator
   99                | declarator ASSIGN initializer

  100 storage_class_specifier: EXTERN
  101                        | STATIC
  102                        | AUTO
  103                        | REGISTER

  104 type_specifier: VOID
  105               | CHAR
  106               | SHORT
  107               | INT
  108               | LONG
  109               | FLOAT
  110               | DOUBLE
  111               | SIGNED
  112               | UNSIGNED
  113               | _BOOL
  114               | _COMPLEX
  115               | _IMAGINARY
  116               | enum_specifier

  117 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  118                         | type_qualifier specifier_qualifier_list_opt

  119 specifier_qualifier_list_opt: specifier_qualifier_list
  120                             | %empty

  121 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  122               | ENUM identifier_opt '{' enumerator_list COMMA '}'
  123               | ENUM IDENTIFIER

  124 identifier_opt: IDENTIFIER
  125               | %empty

  126 enumerator_list: enumerator
  127                | enumerator_list COMMA enumerator

  128 enumerator: ENUMERATION_CONSTANT
  129           | ENUMERATION_CONSTANT ASSIGN constant_expression

  130 type_qualifier: CONST
  131               | RESTRICT
  132               | VOLATILE

  133 function_specifier: INLINE

  134 declarator: pointer direct_declarator
  135           | direct_declarator

  136 direct_declarator: IDENTIFIER
  137                  | '(' declarator ')'
  138                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  139                  | direct_declarator '[' type_qualifier_list ']'
  140                  | direct_declarator '[' assignment_expression ']'
  141                  | direct_declarator '[' ']'
  142                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  143                  | direct_declarator '[' type_qualifier_list MUL ']'
  144                  | direct_declarator '[' MUL ']'
  145                  | direct_declarator '(' changetable parameter_type_list ')'
  146                  | direct_declarator '(' identifier_list ')'
  147                  | direct_declarator '(' changetable ')'

  148 pointer: MUL type_qualifier_list_opt
  149        | MUL type_qualifier_list_opt pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 type_qualifier_list_opt: type_qualifier_list
  153                        | %empty

  154 parameter_type_list: parameter_list
  155                    | parameter_list COMMA ELLIPSIS

  156 parameter_list: parameter_declaration
  157               | parameter_list COMMA parameter_declaration

  158 parameter_declaration: declaration_specifiers declarator
  159                      | declaration_specifiers

  160 identifier_list: IDENTIFIER
  161                | identifier_list COMMA IDENTIFIER

  162 type_name: specifier_qualifier_list

  163 initializer: assignment_expression
  164            | '{' initializer_list '}'
  165            | '{' initializer_list COMMA '}'

  166 initializer_list: designation_opt initializer
  167                 | initializer_list COMMA designation_opt initializer

  168 designation_opt: designation
  169                | %empty

  170 designation: designator_list ASSIGN

  171 designator_list: designator
  172                | designator_list designator

  173 designator: '[' constant_expression ']'
  174           | '.' IDENTIFIER

  175 statement: labeled_statement
  176          | compound_statement
  177          | expression_statement
  178          | selection_statement
  179          | iteration_statement
  180          | jump_statement

  181 loop_statement: labeled_statement
  182               | expression_statement
  183               | selection_statement
  184               | iteration_statement
  185               | jump_statement

  186 labeled_statement: IDENTIFIER COLON M statement
  187                  | CASE constant_expression COLON statement
  188                  | DEFAULT COLON statement

  189 compound_statement: '{' X changetable block_item_list_opt '}'

  190 block_item_list: block_item
  191                | block_item_list M block_item

  192 block_item_list_opt: block_item_list
  193                    | %empty

  194 block_item: declaration
  195           | statement

  196 expression_statement: expression SEMICOLON
  197                     | SEMICOLON

  198 selection_statement: IF '(' expression N ')' M statement N
  199                    | IF '(' expression N ')' M statement N ELSE M statement
  200                    | SWITCH '(' expression ')' statement

  201 iteration_statement: WHILE W '(' X changetable M expression ')' M loop_statement
  202                    | WHILE W '(' X changetable M expression ')' '{' M block_item_list_opt '}'
  203                    | DO D M loop_statement M WHILE '(' expression ')' SEMICOLON
  204                    | DO D '{' M block_item_list_opt '}' M WHILE '(' expression ')' SEMICOLON
  205                    | FOR F '(' X changetable declaration M expression_statement M expression N ')' M loop_statement
  206                    | FOR F '(' X changetable expression_statement M expression_statement M expression N ')' M loop_statement
  207                    | FOR F '(' X changetable declaration M expression_statement M expression N ')' M '{' block_item_list_opt '}'
  208                    | FOR F '(' X changetable expression_statement M expression_statement M expression N ')' M '{' block_item_list_opt '}'

  209 jump_statement: GOTO IDENTIFIER SEMICOLON
  210               | CONTINUE SEMICOLON
  211               | BREAK SEMICOLON
  212               | RETURN expression SEMICOLON
  213               | RETURN SEMICOLON

  214 translation_unit: external_declaration
  215                 | translation_unit external_declaration

  216 external_declaration: function_definition
  217                     | declaration

  218 function_definition: declaration_specifiers declarator declaration_list_opt changetable '{' block_item_list_opt '}'

  219 declaration_list_opt: declaration_list
  220                     | %empty

  221 declaration_list: declaration
  222                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 38
    '(' (40) 13 16 21 22 32 40 137 145 146 147 198 199 200 201 202 203 204 205 206 207 208
    ')' (41) 13 16 21 22 32 40 137 145 146 147 198 199 200 201 202 203 204 205 206 207 208
    '.' (46) 17 174
    '?' (63) 70
    '[' (91) 15 138 139 140 141 142 143 144 173
    ']' (93) 15 138 139 140 141 142 143 144 173
    '{' (123) 21 22 121 122 164 165 189 202 204 207 208 218
    '}' (125) 21 22 121 122 164 165 189 202 204 207 208 218
    error (256)
    AUTO (258) 102
    BREAK (259) 211
    CASE (260) 187
    CHAR (261) 105
    CONST (262) 130
    CONTINUE (263) 210
    DEFAULT (264) 188
    DO (265) 203 204
    DOUBLE (266) 110
    ELSE (267) 199
    ENUM (268) 121 122 123
    EXTERN (269) 100
    FLOAT (270) 109
    FOR (271) 205 206 207 208
    GOTO (272) 209
    IF (273) 198 199
    INLINE (274) 133
    INT (275) 107
    LONG (276) 108
    REGISTER (277) 103
    RESTRICT (278) 131
    RETURN (279) 212 213
    SHORT (280) 106
    SIGNED (281) 111
    SIZEOF (282) 31 32
    STATIC (283) 101 142
    STRUCT (284)
    SWITCH (285) 200
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 112
    VOID (289) 104
    VOLATILE (290) 132
    WHILE (291) 201 202 203 204
    _BOOL (292) 113
    _COMPLEX (293) 114
    _IMAGINARY (294) 115
    IDENTIFIER <smb> (295) 8 17 18 123 124 136 160 161 174 186 209
    INTEGER_CONSTANT <intval> (296) 9
    FLOATING_CONSTANT <char_val> (297) 10
    CHARACTER_CONSTANT <char_val> (298) 11
    STRING_LITERAL <char_val> (299) 12
    ENUMERATION_CONSTANT <char_val> (300) 128 129
    ARROW (301) 18
    INC (302) 19 28
    DEC (303) 20 29
    MUL (304) 34 42 143 144 148 149
    ADD (305) 35 46
    SUB (306) 36 47
    DIV (307) 43
    MOD (308) 44
    SHIFT_LEFT (309) 49
    SHIFT_RIGHT (310) 50
    LT (311) 52
    GT (312) 53
    LTE (313) 54
    GTE (314) 55
    EQ (315) 57
    NEQ (316) 58
    BITWISE_XOR (317) 62
    BITWISE_OR (318) 64
    BITWISE_NOT (319) 37
    BITWISE_AND (320) 33 60
    AND (321) 66
    OR (322) 68
    COLON (323) 70 186 187 188
    SEMICOLON (324) 87 196 197 203 204 209 210 211 212 213
    ELLIPSIS (325) 155
    ASSIGN (326) 73 99 129 170
    MUL_EQ (327) 74
    DIV_EQ (328) 75
    MOD_EQ (329) 76
    ADD_EQ (330) 77
    SUB_EQ (331) 78
    SHIFT_LEFT_EQ (332) 79
    SHIFT_RIGHT_EQ (333) 80
    BITWISE_AND_EQ (334) 81
    BITWISE_XOR_EQ (335) 82
    BITWISE_OR_EQ (336) 83
    COMMA (337) 22 24 85 95 122 127 155 157 161 165 167
    HASH (338)
    "then" (339)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    M <instr_num> (95)
        on left: 1
        on right: 66 68 70 186 191 198 199 201 202 203 204 205 206 207 208
    F (96)
        on left: 2
        on right: 205 206 207 208
    W (97)
        on left: 3
        on right: 201 202
    D (98)
        on left: 4
        on right: 203 204
    X (99)
        on left: 5
        on right: 189 201 202 205 206 207 208
    N <stmt> (100)
        on left: 6
        on right: 70 198 199 205 206 207 208
    changetable (101)
        on left: 7
        on right: 145 147 189 201 202 205 206 207 208 218
    primary_expression <exprss> (102)
        on left: 8 9 10 11 12 13
        on right: 14
    postfix_expression <Arr> (103)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 15 16 17 18 19 20 27
    argument_expression_list <param_num> (104)
        on left: 23 24
        on right: 24 25
    argument_expression_list_opt <param_num> (105)
        on left: 25 26
        on right: 16
    unary_expression <Arr> (106)
        on left: 27 28 29 30 31 32
        on right: 28 29 31 39 72
    unary_operator <u_op> (107)
        on left: 33 34 35 36 37 38
        on right: 30
    cast_expression <Arr> (108)
        on left: 39 40
        on right: 30 40 41 42 43 44
    multiplicative_expression <exprss> (109)
        on left: 41 42 43 44
        on right: 42 43 44 45 46 47
    additive_expression <exprss> (110)
        on left: 45 46 47
        on right: 46 47 48 49 50
    shift_expression <exprss> (111)
        on left: 48 49 50
        on right: 49 50 51 52 53 54 55
    relational_expression <exprss> (112)
        on left: 51 52 53 54 55
        on right: 52 53 54 55 56 57 58
    equality_expression <exprss> (113)
        on left: 56 57 58
        on right: 57 58 59 60
    AND_expression <exprss> (114)
        on left: 59 60
        on right: 60 61 62
    exclusive_OR_expression <exprss> (115)
        on left: 61 62
        on right: 62 63 64
    inclusive_OR_expression <exprss> (116)
        on left: 63 64
        on right: 64 65 66
    logical_AND_expression <exprss> (117)
        on left: 65 66
        on right: 66 67 68
    logical_OR_expression <exprss> (118)
        on left: 67 68
        on right: 68 69 70
    conditional_expression <exprss> (119)
        on left: 69 70
        on right: 70 71 86
    assignment_expression <exprss> (120)
        on left: 71 72
        on right: 23 24 72 84 85 138 140 142 163
    assignment_operator (121)
        on left: 73 74 75 76 77 78 79 80 81 82 83
        on right: 72
    expression <exprss> (122)
        on left: 84 85
        on right: 13 15 70 85 196 198 199 200 201 202 203 204 205 206 207 208 212
    constant_expression (123)
        on left: 86
        on right: 129 173 187
    declaration (124)
        on left: 87
        on right: 194 205 207 217 221 222
    declaration_specifiers (125)
        on left: 88 89 90 91
        on right: 87 92 158 159 218
    declaration_specifiers_opt (126)
        on left: 92 93
        on right: 88 89 90 91
    init_declarator_list (127)
        on left: 94 95
        on right: 95 96
    init_declarator_list_opt (128)
        on left: 96 97
        on right: 87
    init_declarator <smb> (129)
        on left: 98 99
        on right: 94 95
    storage_class_specifier (130)
        on left: 100 101 102 103
        on right: 88
    type_specifier (131)
        on left: 104 105 106 107 108 109 110 111 112 113 114 115 116
        on right: 89 117
    specifier_qualifier_list (132)
        on left: 117 118
        on right: 119 162
    specifier_qualifier_list_opt (133)
        on left: 119 120
        on right: 117 118
    enum_specifier (134)
        on left: 121 122 123
        on right: 116
    identifier_opt (135)
        on left: 124 125
        on right: 121 122
    enumerator_list (136)
        on left: 126 127
        on right: 121 122 127
    enumerator (137)
        on left: 128 129
        on right: 126 127
    type_qualifier (138)
        on left: 130 131 132
        on right: 90 118 150 151
    function_specifier (139)
        on left: 133
        on right: 91
    declarator <smb> (140)
        on left: 134 135
        on right: 98 99 137 158 218
    direct_declarator <smb> (141)
        on left: 136 137 138 139 140 141 142 143 144 145 146 147
        on right: 134 135 138 139 140 141 142 143 144 145 146 147
    pointer <type_sym> (142)
        on left: 148 149
        on right: 134 149
    type_qualifier_list (143)
        on left: 150 151
        on right: 138 139 143 151 152
    type_qualifier_list_opt (144)
        on left: 152 153
        on right: 142 148 149
    parameter_type_list (145)
        on left: 154 155
        on right: 145
    parameter_list (146)
        on left: 156 157
        on right: 154 155 157
    parameter_declaration (147)
        on left: 158 159
        on right: 156 157
    identifier_list (148)
        on left: 160 161
        on right: 146 161
    type_name (149)
        on left: 162
        on right: 21 22 32 40
    initializer <smb> (150)
        on left: 163 164 165
        on right: 99 166 167
    initializer_list (151)
        on left: 166 167
        on right: 21 22 164 165 167
    designation_opt (152)
        on left: 168 169
        on right: 166 167
    designation (153)
        on left: 170
        on right: 168
    designator_list (154)
        on left: 171 172
        on right: 170 172
    designator (155)
        on left: 173 174
        on right: 171 172
    statement <stmt> (156)
        on left: 175 176 177 178 179 180
        on right: 186 187 188 195 198 199 200
    loop_statement <stmt> (157)
        on left: 181 182 183 184 185
        on right: 201 203 205 206
    labeled_statement <stmt> (158)
        on left: 186 187 188
        on right: 175 181
    compound_statement <stmt> (159)
        on left: 189
        on right: 176
    block_item_list <stmt> (160)
        on left: 190 191
        on right: 191 192
    block_item_list_opt <stmt> (161)
        on left: 192 193
        on right: 189 202 204 207 208 218
    block_item <stmt> (162)
        on left: 194 195
        on right: 190 191
    expression_statement <exprss> (163)
        on left: 196 197
        on right: 177 182 205 206 207 208
    selection_statement <stmt> (164)
        on left: 198 199 200
        on right: 178 183
    iteration_statement <stmt> (165)
        on left: 201 202 203 204 205 206 207 208
        on right: 179 184
    jump_statement <stmt> (166)
        on left: 209 210 211 212 213
        on right: 180 185
    translation_unit (167)
        on left: 214 215
        on right: 0 215
    external_declaration (168)
        on left: 216 217
        on right: 214 215
    function_definition (169)
        on left: 218
        on right: 216
    declaration_list_opt (170)
        on left: 219 220
        on right: 218
    declaration_list (171)
        on left: 221 222
        on right: 219 222


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  102 storage_class_specifier: AUTO .

    $default  reduce using rule 102 (storage_class_specifier)


State 2

  105 type_specifier: CHAR .

    $default  reduce using rule 105 (type_specifier)


State 3

  130 type_qualifier: CONST .

    $default  reduce using rule 130 (type_qualifier)


State 4

  110 type_specifier: DOUBLE .

    $default  reduce using rule 110 (type_specifier)


State 5

  121 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  122               | ENUM . identifier_opt '{' enumerator_list COMMA '}'
  123               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 125 (identifier_opt)

    identifier_opt  go to state 33


State 6

  100 storage_class_specifier: EXTERN .

    $default  reduce using rule 100 (storage_class_specifier)


State 7

  109 type_specifier: FLOAT .

    $default  reduce using rule 109 (type_specifier)


State 8

  133 function_specifier: INLINE .

    $default  reduce using rule 133 (function_specifier)


State 9

  107 type_specifier: INT .

    $default  reduce using rule 107 (type_specifier)


State 10

  108 type_specifier: LONG .

    $default  reduce using rule 108 (type_specifier)


State 11

  103 storage_class_specifier: REGISTER .

    $default  reduce using rule 103 (storage_class_specifier)


State 12

  131 type_qualifier: RESTRICT .

    $default  reduce using rule 131 (type_qualifier)


State 13

  106 type_specifier: SHORT .

    $default  reduce using rule 106 (type_specifier)


State 14

  111 type_specifier: SIGNED .

    $default  reduce using rule 111 (type_specifier)


State 15

  101 storage_class_specifier: STATIC .

    $default  reduce using rule 101 (storage_class_specifier)


State 16

  112 type_specifier: UNSIGNED .

    $default  reduce using rule 112 (type_specifier)


State 17

  104 type_specifier: VOID .

    $default  reduce using rule 104 (type_specifier)


State 18

  132 type_qualifier: VOLATILE .

    $default  reduce using rule 132 (type_qualifier)


State 19

  113 type_specifier: _BOOL .

    $default  reduce using rule 113 (type_specifier)


State 20

  114 type_specifier: _COMPLEX .

    $default  reduce using rule 114 (type_specifier)


State 21

  115 type_specifier: _IMAGINARY .

    $default  reduce using rule 115 (type_specifier)


State 22

  217 external_declaration: declaration .

    $default  reduce using rule 217 (external_declaration)


State 23

   87 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON
  218 function_definition: declaration_specifiers . declarator declaration_list_opt changetable '{' block_item_list_opt '}'

    IDENTIFIER  shift, and go to state 34
    MUL         shift, and go to state 35
    '('         shift, and go to state 36

    $default  reduce using rule 97 (init_declarator_list_opt)

    init_declarator_list      go to state 37
    init_declarator_list_opt  go to state 38
    init_declarator           go to state 39
    declarator                go to state 40
    direct_declarator         go to state 41
    pointer                   go to state 42


State 24

   88 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 93 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   89 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 93 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  116 type_specifier: enum_specifier .

    $default  reduce using rule 116 (type_specifier)


State 27

   90 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 93 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 46
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   91 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 93 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 47
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  215 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 48
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 49
    function_definition      go to state 31


State 30

  214 translation_unit: external_declaration .

    $default  reduce using rule 214 (translation_unit)


State 31

  216 external_declaration: function_definition .

    $default  reduce using rule 216 (external_declaration)


State 32

  123 enum_specifier: ENUM IDENTIFIER .
  124 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 124 (identifier_opt)
    $default  reduce using rule 123 (enum_specifier)


State 33

  121 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
  122               | ENUM identifier_opt . '{' enumerator_list COMMA '}'

    '{'  shift, and go to state 50


State 34

  136 direct_declarator: IDENTIFIER .

    $default  reduce using rule 136 (direct_declarator)


State 35

  148 pointer: MUL . type_qualifier_list_opt
  149        | MUL . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 153 (type_qualifier_list_opt)

    type_qualifier           go to state 51
    type_qualifier_list      go to state 52
    type_qualifier_list_opt  go to state 53


State 36

  137 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 34
    MUL         shift, and go to state 35
    '('         shift, and go to state 36

    declarator         go to state 54
    direct_declarator  go to state 41
    pointer            go to state 42


State 37

   95 init_declarator_list: init_declarator_list . COMMA init_declarator
   96 init_declarator_list_opt: init_declarator_list .

    COMMA  shift, and go to state 55

    $default  reduce using rule 96 (init_declarator_list_opt)


State 38

   87 declaration: declaration_specifiers init_declarator_list_opt . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 39

   94 init_declarator_list: init_declarator .

    $default  reduce using rule 94 (init_declarator_list)


State 40

   98 init_declarator: declarator .
   99                | declarator . ASSIGN initializer
  218 function_definition: declaration_specifiers declarator . declaration_list_opt changetable '{' block_item_list_opt '}'

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21
    ASSIGN      shift, and go to state 57

    '{'       reduce using rule 220 (declaration_list_opt)
    $default  reduce using rule 98 (init_declarator)

    declaration              go to state 58
    declaration_specifiers   go to state 59
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list_opt     go to state 60
    declaration_list         go to state 61


State 41

  135 declarator: direct_declarator .
  138 direct_declarator: direct_declarator . '[' type_qualifier_list assignment_expression ']'
  139                  | direct_declarator . '[' type_qualifier_list ']'
  140                  | direct_declarator . '[' assignment_expression ']'
  141                  | direct_declarator . '[' ']'
  142                  | direct_declarator . '[' STATIC type_qualifier_list_opt assignment_expression ']'
  143                  | direct_declarator . '[' type_qualifier_list MUL ']'
  144                  | direct_declarator . '[' MUL ']'
  145                  | direct_declarator . '(' changetable parameter_type_list ')'
  146                  | direct_declarator . '(' identifier_list ')'
  147                  | direct_declarator . '(' changetable ')'

    '('  shift, and go to state 62
    '['  shift, and go to state 63

    $default  reduce using rule 135 (declarator)


State 42

  134 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 36

    direct_declarator  go to state 64


State 43

   92 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 92 (declaration_specifiers_opt)


State 44

   88 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 88 (declaration_specifiers)


State 45

   89 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 89 (declaration_specifiers)


State 46
